force-app/main/default/objects/Account/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent Company)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>