force-app/main/default/objects/Account/fields/Primary_Service__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service__c</fullName>
    <label>Primary Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>