force-app/main/default/objects/Account/fields/Profession_ID__c.field-meta.xml
<CustomField>
    <fullName>Profession_ID__c</fullName>
    <label>Profession_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>