force-app/main/default/objects/Account/fields/Professional_ID__c.field-meta.xml
<CustomField>
    <fullName>Professional_ID__c</fullName>
    <externalId>true</externalId>
    <label>Professional_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>