force-app/main/default/objects/Account/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <label>Pronunciation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>