force-app/main/default/objects/Account/fields/Requires_Firm_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Firm_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Firm Approval</label>
    <type>Checkbox</type>
</CustomField>