force-app/main/default/objects/Account/fields/Research_Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Research_Broker_Dealer__c</fullName>
    <label>Broker Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>