force-app/main/default/objects/Account/fields/Research_Company__c.field-meta.xml
<CustomField>
    <fullName>Research_Company__c</fullName>
    <label>Research Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>