force-app/main/default/objects/Account/fields/Research_ID__c.field-meta.xml
<CustomField>
    <fullName>Research_ID__c</fullName>
    <description>External unique ID from ACT</description>
    <externalId>true</externalId>
    <inlineHelpText>External unique ID from ACT</inlineHelpText>
    <label>Research ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>