force-app/main/default/objects/Account/fields/Research_Status__c.field-meta.xml
<CustomField>
    <fullName>Research_Status__c</fullName>
    <label>Research Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year Candidate</fullName>
            </value>
            <value>
                <fullName>2 Year Candidate</fullName>
            </value>
            <value>
                <fullName>3 Year Candidate</fullName>
            </value>
            <value>
                <fullName>4 Year Candidate</fullName>
            </value>
            <value>
                <fullName>5 Year Candidate</fullName>
            </value>
            <value>
                <fullName>6 Year Candidate</fullName>
            </value>
            <value>
                <fullName>7 Year Candidate</fullName>
            </value>
            <value>
                <fullName>8 Year Candidate</fullName>
            </value>
            <value>
                <fullName>9 Year Candidate</fullName>
            </value>
            <value>
                <fullName>10 Year Candidate</fullName>
            </value>
            <value>
                <fullName>11 Year Candidate</fullName>
            </value>
            <value>
                <fullName>12 Year Candidate</fullName>
            </value>
            <value>
                <fullName>13 Year Candidate</fullName>
            </value>
            <value>
                <fullName>14 Year Candidate</fullName>
            </value>
            <value>
                <fullName>15 Year Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>