force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year Winner</fullName>
            </value>
            <value>
                <fullName>2 Year Winner</fullName>
            </value>
            <value>
                <fullName>3 Year Winner</fullName>
            </value>
            <value>
                <fullName>4 Year Winner</fullName>
            </value>
            <value>
                <fullName>5 Year Winner</fullName>
            </value>
            <value>
                <fullName>6 Year Winner</fullName>
            </value>
            <value>
                <fullName>7 Year Winner</fullName>
            </value>
            <value>
                <fullName>8 Year Winner</fullName>
            </value>
            <value>
                <fullName>9 Year Winner</fullName>
            </value>
            <value>
                <fullName>10 Year Winner</fullName>
            </value>
            <value>
                <fullName>11 Year Winner</fullName>
            </value>
            <value>
                <fullName>12 Year Winner</fullName>
            </value>
            <value>
                <fullName>13 Year Winner</fullName>
            </value>
            <value>
                <fullName>14 Year Winner</fullName>
            </value>
            <value>
                <fullName>15 Year Winner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>