force-app/main/default/objects/Account/fields/Unclean_Data__c.field-meta.xml
<CustomField>
    <fullName>Unclean_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to announce when the person account fails to update in the automated pull to the Five Star Professional website.</description>
    <inlineHelpText>Flag used to announce when the person account fails to update in the automated pull to the Five Star Professional website.</inlineHelpText>
    <label>Unclean Data</label>
    <type>Checkbox</type>
</CustomField>