force-app/main/default/objects/Account/fields/Unshare__c.field-meta.xml
<CustomField>
    <fullName>Unshare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unshare</label>
    <type>Checkbox</type>
</CustomField>