force-app/main/default/objects/Account/fields/WebPassword__c.field-meta.xml
<CustomField>
    <fullName>WebPassword__c</fullName>
    <label>WebPassword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>