force-app/main/default/objects/Account/fields/WebUserName__c.field-meta.xml
<CustomField>
    <fullName>WebUserName__c</fullName>
    <label>WebUserName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>