force-app/main/default/objects/Account/validationRules/forcebrain__Only_One_Type_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>forcebrain__Only_One_Type_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>(forcebrain__IsPersonalAccount__c &amp;&amp; forcebrain__IsProvider__c)</errorConditionFormula>
    <errorMessage>An Account can be one of the following type: &quot;Personal Account&quot;, &quot;Provider&quot; or &quot;Customer&quot;.</errorMessage>
</ValidationRule>