force-app/main/default/objects/Account/validationRules/SAMs_cannot_uncheck_Do_Not_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>SAMs_cannot_uncheck_Do_Not_Call</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(  $User.ProfileId=&quot;00ed00000019BZY&quot;,  FORMULA_Do_Not_Call__c  = True,  PersonDoNotCall =FALSE), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You are not allowed to uncheck the do not call box.  Contact Research.</errorMessage>
</ValidationRule>