force-app/main/default/objects/Account/listViews/AllMNAccounts.listView-meta.xml
<ListView>
    <fullName>AllMNAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>MN,Minn</value>
    </filters>
    <label>All MN Accounts</label>
</ListView>