force-app/main/default/objects/Account/listViews/LANDMARK_WEALTH_MANAGEMENT_GROUP.listView-meta.xml
<ListView>
    <fullName>LANDMARK_WEALTH_MANAGEMENT_GROUP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>LANDMARK WEALTH MANAGEMENT GROUP</label>
    <language>en_US</language>
</ListView>