force-app/main/default/objects/Account/listViews/Parent_Accounts.listView-meta.xml
<ListView>
    <fullName>Parent_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Accounts</label>
</ListView>