force-app/main/default/objects/Account/listViews/Search_by_phone_number.listView-meta.xml
<ListView>
    <fullName>Search_by_phone_number</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Client_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>equals</operation>
    </filters>
    <label>Search by phone number</label>
</ListView>